src/test/deca/context/invalid/created/return/return_bool_int.deca
// Description :
//    return mauvais type : float, demandé int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (2.7) Type de retour effectif : int, déclaré : boolean

class A{
boolean met(){
return 1;
}
}